update course outline

--- a/notes/w01.md
+++ b/notes/w01.md
@@ -8,6 +8,14 @@
 
 # Course outline
 
+## Preview
+
+[ACIT 4640 Course Outline](https://www.bcit.ca/outlines/preview/20243048505/)
+
+## Approved
+
+[ACIT 4640 Course Outline](https://www.bcit.ca/outlines/20243048505/)
+
 ## office hours
 
 Please schedule appointments at least 48 hours in advance via Discord or email.
