add attachments and fix internal links on week 1

--- a/notes/w01.md
+++ b/notes/w01.md
@@ -140,7 +140,7 @@ IaC is Infrastructure management provision using code instead of a manual
 process. Plain text files contain instructions to provision and manage
 infrastructure that can be share with a team using version control systems.
 
-IaC has some of the following bennefits:
+IaC has some of the following benefits:
 
 - Reproducible
 - Easier to scale.
@@ -213,10 +213,10 @@ that you want to explore.
 
 Or you can create your own using a cloud service provider.
 
-Use a recent Linux distro. Ubuntu 23.04/23.10, Fedora 39, openSuse tumbleweed
+Use a recent Linux distro. Ubuntu 23.10/24.04, Fedora 39/40, openSuse tumbleweed
 are all good choices.
 
-Optional [WSL Setup Supplement](4640_Notes/Week1_wsl_supplement.md)
+Optional [WSL Setup Supplement](notes/w01_wsl_setup.md) see Activity 2.
 
 **Reference:**
 
@@ -236,9 +236,10 @@ Split up into groups of 2-3.
 
 In your groups imagine that you are part of a team responsible for provisioning
 and maintaining the infrastructure used for a calendar/productivity app. Recall
-you work in ACIT2515 or something like [Morgen](https://www.morgen.so/) or
-[Akiflow](https://akiflow.com/). Your team has decided to use AWS to host the
-app.
+you work in ACIT2515 and ACIT3640, or something like
+[Morgen](https://www.morgen.so/) or [Akiflow](https://akiflow.com/). 
+
+Your team has decided to use AWS to host the app.
 
 - What are some of the AWS services you would use?
   - Why would you use these services?
@@ -278,6 +279,8 @@ D2L. Include a note on who is in your team.
 
 ## Activity 2: Setup Linux Environment (WSL)
 
+Setup a Linux / Bash CLI environment of your choice on your local machine.
+
 [Linux Environment Setup: WSL](notes/Week1_wsl_setup.md)
 
 ## Activity 3: Setup AWS CLI
@@ -288,8 +291,8 @@ D2L. Include a note on who is in your team.
 
 Install Terraform in your linux environment, either by running directly, by
 following the steps in the script:
-[Terraform Setup](utility/install_terraform.sh), 
-Alternatively you can follow the
+[Terraform Setup](utility/install_terraform.sh), Alternatively you can follow
+the
 [official instructions](https://developer.hashicorp.com/terraform/tutorials/aws-get-started/install-cli).
 
 # Flipped learning material
@@ -303,7 +306,9 @@ Please review the basic operations of the AWS CLI:
 - [AWS CLI v2](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-welcome.html)
 
 ## Terraform
+
 Please read and watch the following material:
+
 - Reading
   [Chapter 1. Why Terraform, Terraform: Up and Running 3rd](https://learning.oreilly.com/library/view/terraform-up-and/9781098116736/ch01.html)
 - Video
