--- a/notes/w01.md
+++ b/notes/w01.md
@@ -270,11 +270,11 @@ D2L. Include a note on who is in your team.
 
 Setup a Linux / Bash CLI environment of your choice on your local machine.
 
-[Linux Environment Setup: WSL](notes/Week1_wsl_setup.md)
+[Linux Environment Setup: WSL](notes/w01_wsl_setup.md)
 
 ## Activity 3: Setup AWS CLI
 
-[AWS CLI Setup](notes/Week1_aws_cli_setup.md)
+[AWS CLI Setup](notes/w01_aws_cli_setup.md)
 
 ## Activity 4: Setup Terraform
 
