updates course information

--- a/notes/w01.md
+++ b/notes/w01.md
@@ -8,24 +8,18 @@
 
 # Course outline
 
-## Preview
-
-[ACIT 4640 Course Outline](https://www.bcit.ca/outlines/preview/20243048505/)
-
-## Approved
-
 [ACIT 4640 Course Outline](https://www.bcit.ca/outlines/20243048505/)
 
-## office hours
+# Office hours
 
 Please schedule appointments at least 48 hours in advance via Discord or email.
 
-### Nathan
+## Nathan
 
-### Tom
+## Tom
 
-- Tuesday 12:00 - 13:00 Room 533
-- Thursday 12:00 - 13:00 Room 533
+- Tuesday 12:00 - 13:00 Room 581
+- Thursday 12:00 - 13:00 Room 410
 
 ## Course notes
 
