--- a/notes/w02.md
+++ b/notes/w02.md
@@ -1,17 +1,27 @@
-# Learning Outcomes and Topics
+# ACIT4640 Week 2 Notes
+## Learning Outcomes and Topics
 
+1. Context Review
 1. SSH Review
 1. Terraform overview
 
-# SSH Review
+## SSH Review
 
 [SSH Review Notes](notes/w02_ssh_review.md)
 
-# Terraform Overview
+## Terraform Overview
 
+Use the following example and attached resources to complete the lab.
+
+1. [Terraform Simple Infrastructure Example](notes/wk02tf .md)
 1. [Terraform Essential Components](attachments/terraform_essential_components.pdf)
 1. [Terraform Cheatsheet](attachments/terraform_cheatsheet.pdf)
 
-# Lab 02
+## Lab 02
 
-[Lab 02](labs/lab02.md)
+See learning Hub for the lab.
+
+## Flipped Learning
+
+View the [Week 2 Flipped Learning Resources](notes/flipped_learning.md##week-02)
+in advance of week 3.
