--- a/notes/w02.md
+++ b/notes/w02.md
@@ -13,7 +13,7 @@
 
 Use the following example and attached resources to complete the lab.
 
-1. [Terraform Simple Infrastructure Example](notes/wk02tf .md)
+1. [Terraform Simple Infrastructure Example](notes/wk02.tf)
 1. [Terraform Essential Components](attachments/terraform_essential_components.pdf)
 1. [Terraform Cheatsheet](attachments/terraform_cheatsheet.pdf)
 
