fix flipped learning heading link

--- a/notes/w02.md
+++ b/notes/w02.md
@@ -23,5 +23,5 @@ See learning Hub for the lab.
 
 ## Flipped Learning
 
-View the [Week 2 Flipped Learning Resources](notes/flipped_learning.md#week-02)
+View the [Week 2 Flipped Learning Resources](flipped_learning.md#week-02)
 in advance of week 3.
